--- a/doc/基本框架设计/通用分页表格.md
+++ b/doc/基本框架设计/通用分页表格.md
@@ -18,6 +18,7 @@
            :option="tableOption"
            @search-change="searchChange"
            @selection-change="selectionChange"
+@sort-change="sortChange"
            @on-load="getDataList">
 </avue-crud>
 ```
